Modify Summary details

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 						<header class="major">
 							<h2>SUMMARY<br /></h2>
 						</header>
-						<p>Full-Stack Developer with more than 10 years of experience in full cycle development focused on coming up with creative solutions by developing various tools and applications to continuously improve ways of working. Adaptable and always eager to learn and grow, looking to leverage my knowledge and experience as a developer.</p>
+						<p>Full-Stack Developer with more than 10 years of experience in full cycle development 
+							focused on coming up with creative solutions by developing various tools and applications 
+							to continuously improve ways of working. 
+							Love implementing new ideas and best practices to improve development efficiency, adaptable and always eager to learn and grow, 
+							looking to leverage my knowledge and experience as a developer.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
@@ -43,7 +47,7 @@
 						</header>
 						<div class="row">
 							<article class="col-4 col-12-xsmall work-item">
-								<h3>Advanced - Highly experienced</h3>
+								<h3><strong>Advanced</strong> - Highly experienced</h3>
 								<p>JavaScript, JQuery, HTML5, CSS, Bootstrap, ASP.Net C#, ASP.Net VB, SOAP & REST API, MSSQL, MySQL, PostgresSQL, Apache, NGINX, IIS, Acunetix, Qualys Guard, OWASP, 
 									Visual Studio, VS Code
 									</p>
